fix: center alignwide block by adjusting margins

--- a/assets/scss/main/_gutenberg.scss
+++ b/assets/scss/main/_gutenberg.scss
@@ -33,8 +33,8 @@ body {
   .alignwide {
     width: 100%;
     max-width: 100%;
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
